service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: rncp-k8s
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP # Accessible uniquement à l'intérieur du cluster
